Correction align center + ajout du parametrage Les image peuvent mtn etre redimentionné

--- a/wiki-react/src/generate.css
+++ b/wiki-react/src/generate.css
@@ -1,84 +1,45 @@
 .wiki {
-	background-color: #262121;
-	margin: 0px;
-	padding: 5% 10% 10% 10%;
+	background-color: #F5F5FA;
 }
 .wiki .text {
-	color: white;
-	font-size: 13pt;
-	font-family: rubik;
+	color: black;
+	font-family: Trebuchet MS;
 }
-.wiki .text a{
-	color: #F8CA01;
-}
-.wiki .image{
-	align-content: center;
-}
-.wiki .image{
-	font-style: italic;
-	color: white;
-	font-size: 11pt;
-}
-.wiki .button{
-	background-color: #F8CA01;
-	margin: 10px 0px 10px 0px;
-	padding: 10px;
-	border-radius: 20px;
-}
-.wiki .button{
+.wiki .text b{
 	font-weight: bold;
-	color: white;
-	text-decoration: none;
-	text-align: center;
+	color: black;
 }
-.wiki .subject .title {
-	color: white;
+.wiki .subject .infoBox {
+	background-color: #F6F6FB;
+	border: 2px #566BB3 solid;
+	margin: 5px;
 }
-.wiki .subject .chapter .title {
-	border-bottom: 1px #565252 solid;
-	padding: 0px 0px 10px 0px;
+.wiki .subject .infoBox .text b{
+	font-weight: bold;
+	color: black;
 }
-.wiki .subject .chapter .chapter .title {
-	font-size: 15pt;
-	border-bottom: 0px black solid;
+.wiki .subject .infoBox .text a{
+	font-weight: bold;
+	color: #566BB3;
 }
-.wiki .subject .tableOfContent {
-	border: 1px #565252 solid;
-	padding: 0px 0px 0px 0px;
+.wiki .subject .summary .text {
+	color: black;
+	font-family: Trebuchet MS;
 }
-.wiki .subject .tableOfContent .title {
-	border-bottom: 1px #565252 solid;
-	padding: 0px 0px 10px 10px;
-}
-.wiki .subject .tableOfContent .text a{
-	color: white;
-}
-.wiki .subject .references {
-	background-color: #353030;
-	border: 1px #5A5485 solid;
-	padding: 0px 15px 5px 15px;
-}
-.wiki .subject .references .title {
-	text-align: center;
+.wiki .subject .summary .text b{
+	font-weight: bold;
+	color: black;
 }
 .wiki .subject .relatedSubject {
-	background-color: #353030;
-	border: 1px #5A5485 solid;
-	padding: 0px 15px 5px 15px;
+	background-color: white;
+	margin: 5px;
+	box-shadow: 2px 2px gray;
 }
-.wiki .subject .relatedSubject .title {
-	text-align: center;
-}
-.wiki .navBar {
-	background-color: #353030;
-	border: 1px #5A5485 solid;
-	padding: 15px;
-}
-.wiki .navBar .text {
+.wiki .subject .relatedSubject .text b{
 	font-weight: bold;
-	color: #F8CA01;
-	font-size: 18pt;
+	color: black;
 }
-.wiki .navBar .text a{
-	text-decoration: none;
+.wiki .subject .relatedSubject .text a{
+	font-weight: bold;
+	color: #566BB3;
 }
